--- a/2019Fall-Web/Web-Lesson5/ToDoICP/src/app/app.component.html
+++ b/2019Fall-Web/Web-Lesson5/ToDoICP/src/app/app.component.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Calculator</title>
+  <title>To Do List</title>
   // 1. write Typescript code in "app.component.ts" to work with ToDo list
 </head>
 <body>
